# nowgo-saude

./: .env.example  .gitignore  .pre-commit-config.yaml
.github/workflows/: backend-ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 3a1bc4fecef2_0001_baseline_telemetry_schema.py  7b3d58dfb2c6_0003_ai_workers_tables.py  bb688fa367e5_0002_pii_vault_records.py
backend/scripts/: deploy-cloud-run.sh  generate-secrets.sh  pii_triage.py  run-seed-job.sh  seed_demo.py  start.sh
backend/src/nowgo_saude/: __init__.py  config.py  db.py  main.py  schemas.py
backend/src/nowgo_saude/ai/: __init__.py
backend/src/nowgo_saude/ai/guards/: __init__.py  base.py  clinical.py  intent.py  output_filter.py  prompt_injection.py
backend/src/nowgo_saude/ai/models/: __init__.py  anomaly_signal.py  daily_brief.py  human_decision.py  recommendation.py  worker_run.py
backend/src/nowgo_saude/api/: __init__.py  deps.py  events.py  metrics.py  pii.py  pipeline_runs.py  sources.py
backend/src/nowgo_saude/core/: __init__.py
backend/src/nowgo_saude/core/auth/: __init__.py  factory.py  jwt_provider.py  provider.py  static_provider.py
backend/src/nowgo_saude/core/llm/: __init__.py  egress_guard.py  grok_provider.py  null_provider.py  provider.py
backend/src/nowgo_saude/core/observability/: __init__.py  otel.py
backend/src/nowgo_saude/dashboard/: schemas.py
backend/src/nowgo_saude/dashboard/api/: router.py
backend/src/nowgo_saude/dashboard/services/: aggregations.py  alerts.py  health.py  kpis.py  regions.py  units.py
backend/src/nowgo_saude/models/: __init__.py  audit_entry.py  pii_vault.py  pipeline_run.py  source.py  telemetry_event.py
backend/src/nowgo_saude/services/: __init__.py  anonymization.py  audit.py  pii_vault.py  pipeline.py
backend/tests/: conftest.py
backend/tests/contract/: test_sources_api.py  test_telemetry_event_schema.py
backend/tests/integration/: test_auth_jwt_e2e.py  test_ingestion_pipeline.py  test_otel_pipeline_span.py  test_pii_reidentify_api.py
backend/tests/unit/: test_anonymization.py  test_auth_jwt_provider.py  test_auth_static_provider.py  test_db_url_normalize.py  test_egress_guard.py  test_grok_provider.py  test_guards.py  test_llm_provider.py  test_otel_setup.py  test_pii_vault.py
frontend/: .env.example  instrumentation.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/lib/: backend-client.ts  dashboard-client.ts  dashboard-server.ts  mock-data.ts  otel.ts  types.ts
infra/docker/: docker-compose.dev.yaml
infra/otel/: collector-config.yaml
specs/001-citizen-telemetry-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+45 files in other folders)
