[project]
name = "nowgo-saude-backend"
version = "0.1.0"
description = "NowGo Saude - backend FastAPI for citizen telemetry ingestion and operational APIs."
authors = [{ name = "NowGo AI", email = "engineering@nowgo.ai" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "LicenseRef-Proprietary"
dependencies = ["fastapi (>=0.136.1,<0.137.0)", "uvicorn[standard] (>=0.46.0,<0.47.0)", "pydantic (>=2)", "pydantic-settings (>=2.14.0,<3.0.0)", "sqlalchemy (>=2)", "alembic (>=1.18.4,<2.0.0)", "psycopg[binary] (>=3.3.4,<4.0.0)", "pgvector (>=0.4.2,<0.5.0)", "celery (>=5.6.3,<6.0.0)", "redis (>=7.4.0,<8.0.0)", "httpx (>=0.28.1,<0.29.0)", "python-jose[cryptography] (>=3.5.0,<4.0.0)", "opentelemetry-distro (>=0.62b1,<0.63)", "opentelemetry-exporter-otlp (>=1.41.1,<2.0.0)", "opentelemetry-instrumentation-fastapi (>=0.62b1,<0.63)", "opentelemetry-instrumentation-sqlalchemy (>=0.62b1,<0.63)", "opentelemetry-instrumentation-celery (>=0.62b1,<0.63)", "opentelemetry-instrumentation-httpx (>=0.62b1,<0.63)", "opentelemetry-instrumentation-redis (>=0.62b1,<0.63)", "presidio-analyzer (>=2.2.362,<3.0.0)", "presidio-anonymizer (>=2.2.362,<3.0.0)"]

[tool.poetry]
package-mode = true
packages = [{ include = "nowgo_saude", from = "src" }]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S608"]
"src/nowgo_saude/api/**/*.py" = ["B008"]
"src/nowgo_saude/dashboard/api/**/*.py" = ["B008"]
"alembic/versions/*.py" = ["E501", "I001", "F401", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["presidio_analyzer.*", "presidio_anonymizer.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring docker-compose services",
    "contract: API contract tests against OpenAPI/JSON Schema",
    "slow: tests that take >5s",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "testcontainers[postgres,redis] (>=4.14.2,<5.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=2.0.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "httpx-sse (>=0.4.3,<0.5.0)",
    "types-python-jose (>=3.5.0.20260408,<4.0.0.0)",
    "jsonschema (>=4.26.0,<5.0.0)",
    "openapi-core (>=0.19,<1)",
    "freezegun (>=1.5.5,<2.0.0)"
]
